[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Ship.gd" type="Script" id=1]
[ext_resource path="res://art/prototype_ship.png" type="Texture" id=2]

[sub_resource type="CanvasItemMaterial" id=1]

render_priority = 0
blend_mode = 0
light_mode = 0

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 54.1043

[node name="Ship" type="Area2D"]

material = SubResource( 1 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Material" ]
acceleration = Vector2( 100, 200 )
max_speed = Vector2( 250, 500 )

[node name="Collision" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 2 )

[node name="Camera" type="Camera2D" parent="." index="1"]

offset = Vector2( 0, -700 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Limit" ]

[node name="Body" type="Sprite" parent="." index="2"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Offset" ]

[node name="LeftWeapon" type="Position2D" parent="Body" index="0"]

position = Vector2( -51.5, -10 )
_sections_unfolded = [ "Transform" ]

[node name="RightWeapon" type="Position2D" parent="Body" index="1"]

position = Vector2( 51.5, -10 )
_sections_unfolded = [ "Transform" ]

[node name="WeaponsReloadTime" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="Bullets" type="Node" parent="." index="4"]


